Renames weight with mass

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -1390,6 +1390,7 @@ arb:
     manual_period: "من %{start} الى %{finish}"
     # map: "Carte"
     # markers: "Objectifs"
+    mass: "الوزن"
     # measure_options: "Indicateur de type mesure"
     # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
@@ -1471,10 +1472,10 @@ arb:
     nb_years: "عدد السنوات عامة"
     # need_building_to_create_production: "Vous devez créer un lieu de stockage pour pouvoir enregistrer vos productions"
     # need_entities_to_consult_mandates: "Vous devez créer des fiches clients/fournisseurs avant"
+    # net_mass: "Poids net"
     # net_surface_area: "Surface net"
     net_vat_amount: "صافي قيمة الضريبة الاضافية المستحقة"
     # net_volume: "Volume net"
-    # net_weight: "Poids net"
     new: "انشاء دفعة جديدة"
     new_deposit:
       # one: "Effectuer une remise\_: %{mode} (%{count} encaissement disponible)"
@@ -1943,7 +1944,6 @@ arb:
       # resized: "Mode «\_Tout à l’écran\_»"
     virtual_quantity: "الكمية العملية"
     waiting: "أ€ التسدسد لاحقا" #?
-    weight: "الوزن"
     # with_assets_depreciations: "Inclure les amortissements des immobilisations"
     with_prints: "(وتشمل الطباعة (الفواتير والاوامر"
     x_cashes:
