--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -102,6 +102,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -206,7 +207,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -284,6 +284,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -388,7 +389,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -466,6 +466,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -570,7 +571,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -770,14 +770,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -793,7 +793,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -873,6 +873,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -977,7 +978,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -1117,6 +1117,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -1221,7 +1222,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -1323,6 +1323,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -1427,7 +1428,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -1638,6 +1638,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -1742,7 +1743,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -1820,6 +1820,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -1924,7 +1925,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -2151,6 +2151,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -2255,7 +2256,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -2333,6 +2333,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -2437,7 +2438,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -2559,6 +2559,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -2663,7 +2664,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -2741,6 +2741,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -2845,7 +2846,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -2875,14 +2875,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -2898,7 +2898,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -3034,6 +3034,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -3138,7 +3139,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -3215,6 +3215,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -3319,7 +3320,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -3397,6 +3397,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -3501,7 +3502,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -3531,14 +3531,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -3554,7 +3554,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -3634,6 +3634,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -3738,7 +3739,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -3882,6 +3882,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -3986,7 +3987,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -4096,6 +4096,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -4200,7 +4201,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -4277,6 +4277,7 @@ fra:
         helianthus: "Tournesol"
         herbicide: "Produit herbicide"
         hordeum: "Orge"
+        hordeum_hibernum: "Orge d'hiver"
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatérialisable"
         insecta: "Insecte"
@@ -4381,7 +4382,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"
         water: "Eau"
         wine: "Vin"
-        hordeum_hibernum: "Orge d'hiver"
         worker: "Travailleur"
         zea: "Maïs"
         zone: "Zone physique"
@@ -4411,14 +4411,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -4434,7 +4434,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -4466,14 +4466,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -4489,7 +4489,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -4521,14 +4521,14 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -4544,7 +4544,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
