--- a/config/locales/eng/nomenclatures.yml
+++ b/config/locales/eng/nomenclatures.yml
@@ -935,6 +935,7 @@ eng:
         # energy: "Energie"
         # length: "Longueur"
         # luminous_intensity: "Intensité lumineuse"
+        # mass: "Masse"
         # mass_area_density: "Quantité de matière par unité de surface"
         # mass_concentration: "Concentration massique"
         # mass_density: "Quantité de matière par unité de matière"
@@ -945,7 +946,6 @@ eng:
         # temperature: "Temperature"
         # time: "Temps"
         # volume: "Volume"
-        # weight: "Masse"
       # name: "Dimensions"
     document_categories:
       attributes:
@@ -1118,7 +1118,7 @@ eng:
         fat_matters_concentration: #?
         freezing_point_temperature: #?
         geographic_coordinate: #?
-        hundred_grain_weight: #?
+        hundred_grain_mass: #?
         immunoglobulins_concentration: #?
         inel_index: #?
         inhibitors_presence:
@@ -1154,14 +1154,14 @@ eng:
             # none: "N/A"
             # triplets: "Triplés"
             # twins: "Jumeaux"
+        maximum_load_net_mass: #?
         maximum_load_net_volume: #?
-        maximum_load_net_weight: #?
         meat_withdrawal_period: #?
         milk_withdrawal_period: #?
         motor_power: #?
+        net_mass: #?
         net_surface_area: #?
         net_volume: #?
-        net_weight: #?
         nitrogen_concentration: #?
         phosphorus_concentration: #?
         plant_life_state:
@@ -1219,14 +1219,14 @@ eng:
         # livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Mammalia lactation state"
         mammalia_reproduction_state: "Mammalia reproduction state"
+        # maximum_load_net_mass: "Poids net maximum en charge"
         # maximum_load_net_volume: "Capacité volumique nette maximum"
-        # maximum_load_net_weight: "Poids net maximum en charge"
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         # motor_power: "Puissance du moteur"
+        # net_mass: "Poids net"
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
-        # net_weight: "Poids net"
         # nitrogen_concentration: "Teneur en azote"
         # phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Plant life state"
@@ -1243,7 +1243,7 @@ eng:
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
         sowable: "Sowable" #?
         temperature: "Temperature"
-        # thousand_grain_weight: "Poids de mille grains"
+        # thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Total bacteria concentration"
         # unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Urea concentration"
@@ -1939,6 +1939,7 @@ eng:
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
+        # hordeum_hibernum: "Orge d'hiver"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         immatter: "Immatter"
         # insecta: "Insecte"
@@ -2044,7 +2045,6 @@ eng:
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
         # wine: "Vin"
-        # hordeum_hibernum: "Orge d'hiver"
         worker: "Worker"
         # zea: "Maïs"
         zone: "Zone"
