--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -575,7 +575,7 @@ fra:
     current_amount: "Montant actuel"
     current_animal_disease_state: "Etat de santé actuel" #?
     current_localization: "Current localization"
-    current_net_weight: "Dernière pesée" #?
+    current_net_mass: "Dernière pesée" #?
     current_ownership: "Current ownership"
     current_phase: "Current phase"
     # current_sign_in_at: "Current sign in at"
@@ -832,6 +832,7 @@ fra:
     managed_unpaid_sales: "Ventes impayées gérées" #?
     mandates: "Responsabilités"
     markers: "Repères"
+    mass: "Poids (kg)"
     maximal_grantable_reduction_percentage: "Pourcentage maximal autorisé à etre effectué"
     maximal_length: "Longueur maximale"
     maximal_quantity: "Maximal quantity" #?
@@ -866,8 +867,8 @@ fra:
     nature: "Type"
     nature_name: "Nature name"
     natures: "Natures"
+    net_mass: "Masse nette"
     net_volume: "Volume net" #?
-    net_weight: "Masse nette" #?
     nic: "NIC (Numéro Interne de Classement)" #?
     node: "Nœud"
     nodes: "Nœuds d’extraction"
@@ -1181,7 +1182,6 @@ fra:
     waiting_deliveries: "Livraisons en attente"
     webpass: "Mot de passe web" #?
     websites: "Sites web"
-    weight: "Poids (kg)"
     with_accounting: "Passer en comptabilité"
     with_commission: "Inclure une commission"
     with_deposit: "Utiliser les remises en banque"
