--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -776,6 +776,7 @@ fra:
         energy: "Energie"
         length: "Longueur"
         luminous_intensity: "Intensité lumineuse"
+        mass: "Masse"
         mass_area_density: "Quantité de matière par unité de surface"
         mass_concentration: "Concentration massique"
         mass_density: "Quantité de matière par unité de matière"
@@ -786,7 +787,6 @@ fra:
         temperature: "Temperature"
         time: "Temps"
         volume: "Volume"
-        weight: "Masse"
     document_categories:
       name: "Catégories de documents"
       attributes:
@@ -1024,14 +1024,14 @@ fra:
         # mammalia_reproduction_method_embryo_transplant: "Mammalia reproduction method embryo transplant"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         # mammalia_twins_condition: "Mammalia twins condition"
+        maximum_load_net_mass: "Poids net maximum en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
-        maximum_load_net_weight: "Poids net maximum en charge"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
+        net_mass: "Poids net"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
-        net_weight: "Poids net"
         nitrogen_concentration: "Teneur en azote"
         phosphorus_concentration: "Teneur en phosphore"
         plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -1048,7 +1048,7 @@ fra:
         shape: "Forme"
         somatic_cell_concentration: "Dénombrement des cellules somatiques"
         temperature: "Température"
-        thousand_grain_weight: "Poids de mille grains"
+        thousand_grain_mass: "Poids de mille grains"
         total_bacteria_concentration: "Dénombrement des germes totaux"
         unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         urea_concentration: "Teneur moyenne en urée"
@@ -1736,6 +1736,7 @@ fra:
         helianthus: "Tournesol"                            # asteraceae
         herbicide: "Produit herbicide"                     # plant_medicine
         hordeum: "Orge"                                    # poaceae
+        hordeum_hibernum: "Orge d'hiver"                   # hordeum
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe" # land_parcel
         immatter: "Immatérialisable"                       # product
         insecta: "Insecte"                                 # animal
@@ -1840,7 +1841,6 @@ fra:
         vitis_vinifera: "Vitis vinifera"                   # vitis
         water: "Eau"                                       # matter
         wine: "Vin"                                        # organic_matter
-        hordeum_hibernum: "Orge d'hiver"                     # hordeum
         worker: "Travailleur"                              # equipment
         zea: "Maïs"                                        # poaceae
         zone: "Zone physique"                              # matter
