--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -890,6 +890,7 @@ jpn:
         # energy: "Energie"
         # length: "Longueur"
         # luminous_intensity: "Intensité lumineuse"
+        # mass: "Masse"
         # mass_area_density: "Quantité de matière par unité de surface"
         # mass_concentration: "Concentration massique"
         # mass_density: "Quantité de matière par unité de matière"
@@ -900,7 +901,6 @@ jpn:
         # temperature: "Temperature"
         # time: "Temps"
         # volume: "Volume"
-        # weight: "Masse"
       # name: "Dimensions"
     document_categories:
       attributes:
@@ -1046,7 +1046,7 @@ jpn:
         fat_matters_concentration: #?
         freezing_point_temperature: #?
         geographic_coordinate: #?
-        hundred_grain_weight: #?
+        hundred_grain_mass: #?
         immunoglobulins_concentration: #?
         inel_index: #?
         inhibitors_presence:
@@ -1082,14 +1082,14 @@ jpn:
             # none: "N/A"
             # triplets: "Triplés"
             # twins: "Jumeaux"
+        maximum_load_net_mass: #?
         maximum_load_net_volume: #?
-        maximum_load_net_weight: #?
         meat_withdrawal_period: #?
         milk_withdrawal_period: #?
         motor_power: #?
+        net_mass: #?
         net_surface_area: #?
         net_volume: #?
-        net_weight: #?
         nitrogen_concentration: #?
         phosphorus_concentration: #?
         plant_life_state:
@@ -1144,14 +1144,14 @@ jpn:
         # livestock_unit: "UGB (Unité de Gros Bétail)"
         # mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         # mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
+        # maximum_load_net_mass: "Poids net maximum en charge"
         # maximum_load_net_volume: "Capacité volumique nette maximum"
-        # maximum_load_net_weight: "Poids net maximum en charge"
         # meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         # milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         # motor_power: "Puissance du moteur"
+        # net_mass: "Poids net"
         # net_surface_area: "Surface nette"
         # net_volume: "Volume net"
-        # net_weight: "Poids net"
         # nitrogen_concentration: "Teneur en azote"
         # phosphorus_concentration: "Teneur en phosphore"
         # plant_life_state: "Phase du bioprocessus de vie d’un végétal"
@@ -1167,7 +1167,7 @@ jpn:
         # shape: "Forme"
         # somatic_cell_concentration: "Dénombrement des cellules somatiques"
         # temperature: "Température"
-        # thousand_grain_weight: "Poids de mille grains"
+        # thousand_grain_mass: "Poids de mille grains"
         # total_bacteria_concentration: "Dénombrement des germes totaux"
         # unique_synthesis_index: "ISU (Index de Synthèse Unique)"
         # urea_concentration: "Teneur moyenne en urée"
@@ -1821,6 +1821,7 @@ jpn:
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
+        # hordeum_hibernum: "Orge d'hiver"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
         # insecta: "Insecte"
@@ -1925,7 +1926,6 @@ jpn:
         # vitis_vinifera: "Vitis vinifera"
         # water: "Eau"
         # wine: "Vin"
-        # hordeum_hibernum: "Orge d'hiver"
         # worker: "Travailleur"
         # zea: "Maïs"
         # zone: "Zone physique"
