--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -1267,6 +1267,7 @@ spa:
     manual_period: "del %{empezo} al %{termino}"
     # map: "Carte"
     # markers: "Objectifs"
+    # mass: "Poids"
     # measure_options: "Indicateur de type mesure"
     # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
@@ -1332,10 +1333,10 @@ spa:
     nb_years: "Nombre de años en el historico"
     # need_building_to_create_production: "Vous devez créer un lieu de stockage pour pouvoir enregistrer vos productions"
     # need_entities_to_consult_mandates: "Vous devez créer des fiches clients/fournisseurs avant"
+    # net_mass: "Poids net"
     # net_surface_area: "Surface net"
     net_vat_amount: "TVA neta deuda"
     # net_volume: "Volume net"
-    # net_weight: "Poids net"
     # new: "Nouveau..."
     new_deposit:
       # one: "Effectuer une remise\_: %{mode} (%{count} encaissement disponible)"
@@ -1756,7 +1757,6 @@ spa:
       # printable: "Mode «\_Imprimable\_»"
       # resized: "Mode «\_Tout à l’écran\_»"
     # virtual_quantity: "Quantité virtuelle"
-    # weight: "Poids"
     # with_assets_depreciations: "Inclure les amortissements des immobilisations"
     with_prints: "Incluir las impresiones (facturas, encargos...)"
     x_cashes:
