--- a/config/locales/fra/complement.yml
+++ b/config/locales/fra/complement.yml
@@ -770,12 +770,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
@@ -2875,12 +2875,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
@@ -3531,12 +3531,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
@@ -4411,12 +4411,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
@@ -4466,12 +4466,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
@@ -4521,12 +4521,12 @@ fra:
         livestock_unit: "UGB (Unité de Gros Bétail)"
         mammalia_lactation_state: "Phase du bioprocessus de lactation d’un mammifère"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
