--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -1024,12 +1024,12 @@ fra:
         # mammalia_reproduction_method_embryo_transplant: "Mammalia reproduction method embryo transplant"
         mammalia_reproduction_state: "Phase du bioprocessus de reproduction d’un mammifère"
         # mammalia_twins_condition: "Mammalia twins condition"
-        maximum_load_net_mass: "Poids net maximum en charge"
+        maximum_load_net_mass: "Masse nette maximale en charge"
         maximum_load_net_volume: "Capacité volumique nette maximum"
         meat_withdrawal_period: "Période d’attente avant remise en vente de viande"
         milk_withdrawal_period: "Période d’attente avant remise en vente de lait"
         motor_power: "Puissance du moteur"
-        net_mass: "Poids net"
+        net_mass: "Masse nette"
         net_surface_area: "Surface nette"
         net_volume: "Volume net"
         nitrogen_concentration: "Teneur en azote"
