Add a new cell Meteo which find meteorological info at CultivableZone centroid

--- a/config/locales/fra/support.yml
+++ b/config/locales/fra/support.yml
@@ -13,7 +13,7 @@ fra:
       legal: "%d %B %Y"
       long: "%B %d, %Y"
       month_letter: "%d %B %Y"
-      short: "%b %d"
+      short: "%d %b"
     month_names: ["", "janvier", "février", "mars", "avril", "mai", "juin", "juillet", "août", "septembre", "octobre", "novembre", "décembre"]
   datetime:
     distance_in_words:
