--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -127,6 +127,7 @@ jpn:
     backend/cells/last_procedures_cells: #?
     backend/cells/last_products_cells: #?
     backend/cells/map_cells: #?
+    backend/cells/meteo_cells: #?
     backend/cells/placeholder_cells: #?
     backend/cells/product_bar_cells: #?
     backend/cells/product_pie_cells: #?
@@ -1150,6 +1151,7 @@ jpn:
     # map: "Carte"
     # markers: "Objectifs"
     # mass: "Poids"
+    # maximal_temperature: "Température maximale"
     # measure_options: "Indicateur de type mesure"
     # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
@@ -1182,6 +1184,7 @@ jpn:
     # merge: "Fusionner"
     # meteo: "Météo"
     # milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+    # minimal_temperature: "Température minimale"
     missing_help: "無意味なページ"
     # mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
     # mobile: "Portable"
@@ -1336,6 +1339,7 @@ jpn:
     # play: "Éxécuter"
     # please_wait: "Merci de patienter..."
     # population: "Population"
+    # precipitation: "Précipitations"
     # preferences: "Préférences"
     # pretax_amount: "Montant HT"
     previous: "前へ"
