--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -134,6 +134,7 @@ arb:
     backend/cells/last_procedures_cells: #?
     backend/cells/last_products_cells: #?
     backend/cells/map_cells: #?
+    backend/cells/meteo_cells: #?
     backend/cells/placeholder_cells: #?
     backend/cells/product_bar_cells: #?
     backend/cells/product_pie_cells: #?
@@ -1391,6 +1392,7 @@ arb:
     # map: "Carte"
     # markers: "Objectifs"
     mass: "الوزن"
+    # maximal_temperature: "Température maximale"
     # measure_options: "Indicateur de type mesure"
     # meat_withdrawal_period: "Période d'attente avant remise en vente de viande"
     # medical_informations: "Informations médicales"
@@ -1435,6 +1437,7 @@ arb:
     merge: "دمج"
     # meteo: "Météo"
     # milk_withdrawal_period: "Période d'attente avant remise en vente de lait"
+    # minimal_temperature: "Température minimale"
     missing_help: "صفحات مفقودة"
     # mistake_on_quantities_sum: "La somme des quantités n’est pas égale à la quantité totale produite"
     # mobile: "Portable"
@@ -1603,6 +1606,7 @@ arb:
     # play: "Éxécuter"
     # please_wait: "Merci de patienter..."
     # population: "Population"
+    # precipitation: "Précipitations"
     # preferences: "Préférences"
     # pretax_amount: "Montant HT"
     previous: "السابق"
