--- a/config/locales/fra/nomenclatures.yml
+++ b/config/locales/fra/nomenclatures.yml
@@ -771,10 +771,12 @@ fra:
         expression: "Expression"
       items:
         amount_of_substance: "Quantité de matière"
+        angle: "Angle"
         concentration: "Concentration"
+        distance: "Distance"
+        distance_speed: "Vitesse (distance)"
         electric_current: "Intensité"
-        energy: "Energie"
-        length: "Longueur"
+        energy: "Énergie"
         luminous_intensity: "Intensité lumineuse"
         mass: "Masse"
         mass_area_density: "Quantité de matière par unité de surface"
@@ -782,6 +784,7 @@ fra:
         mass_density: "Quantité de matière par unité de matière"
         none: "Aucune"
         power: "Puissance"
+        pressure: "Pression"
         specific_volume: "Volume spécifique"
         surface_area: "Superficie"
         temperature: "Temperature"
@@ -825,7 +828,7 @@ fra:
         incoming_delivery_docket: "Bon de réception"
         inventory: "Inventaire"
         journal: "Journal"
-        manure_management_plan: "Cahier d'épandage"
+        manure_management_plan: "Cahier d’épandage"
         outgoing_deliveries_journal: "Journal de livraison"
         outgoing_delivery_docket: "Bon de livraison"
         phytosanitary_registry: "Registre phytosanitaire"
@@ -1041,7 +1044,7 @@ fra:
         protein_concentration_index: "TP (Taux Protéïque)"
         protein_matters_concentration: "Teneur en matières protéïques"
         provisional_grains_yield: "Rendement prévisionnel en grain"
-        provisional_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
+        provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
         # provisional_nitrogen_input: "Provisional nitrogen input"
         reproductor: "Reproducteur"
         sex: "Sexe"
@@ -1344,7 +1347,7 @@ fra:
         cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
         champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         chemical_fertiliser_division: "Emplacement de stockage des engrais"
-        clay_land_parcel: "Parcelle d'argile lourde"
+        clay_land_parcel: "Parcelle d’argile lourde"
         clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         complete_herbicide: "Herbicide total"
         coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
@@ -1407,7 +1410,7 @@ fra:
         # mineral_feed_block_25: "Mineral feed block 25"
         miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
-        mixed_chemical_fertilizer: "Mélange d'engrais"
+        mixed_chemical_fertilizer: "Mélange d’engrais"
         # mixture_crop: "Mixture crop"
         # mixture_seed: "Mixture seed"
         molluscicide: "Molluscicide"
@@ -1440,14 +1443,14 @@ fra:
         sorghum_crop: "Culture de sorgho"
         sorghum_seed_25: "Semence de sorgho sac de 25kg"
         sower: "Semoir"
-        spelt_seed_25: "Semence d'épeautre sac de 25kg"
+        spelt_seed_25: "Semence d’épeautre sac de 25kg"
         spelt_wheat_crop: "Culture d’épeautre"
         sprayer: "Pulvérisateur"
         spread_renting: "Location d’épandeur"
         spreader: "Épandeur à engrais"
         spreader_trailer: "Épandeur à fumier"
-        spring_barley_crop: "Culture d'orge de printemps"
-        spring_barley_seed_25: "Semence d'orge de printemps - sac de 25kg"
+        spring_barley_crop: "Culture d’orge de printemps"
+        spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         sunflower_crop: "Culture de tournesol"
         # superficial_plow: "Superficial plow"
         swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
@@ -1467,8 +1470,8 @@ fra:
         wheat_straw: "Paille de blé"
         wheat_straw_bales: "Bottes de paille de blé"
         wine: "Vin"
-        winter_barley_crop: "Culture d'orge d'hiver"
-        winter_barley_seed_25: "Semence d'orge d'hiver sac de 25kg"
+        winter_barley_crop: "Culture d’orge d’hiver"
+        winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
         zea_herbicide: "Herbicide maïs"
     product_natures:
       name: "Type de produits"
@@ -1532,7 +1535,7 @@ fra:
         milk: "Lait"
         milk_tank: "Tank à lait"
         mineral_cleaner: "Nettoyant chimique"
-        mixed_chemical_fertilizer: "Mélange d'engrais"
+        mixed_chemical_fertilizer: "Mélange d’engrais"
         molluscicide: "Molluscicide"
         mower: "Faucheuse"
         natural_water: "Eau de pluie / du puit"
@@ -1594,6 +1597,7 @@ fra:
         # b: "B"
         # coefficient: "Coefficient"
         # coefficients: "Coefficients"
+        # d: "D"
         # dimension: "Dimension"
         # start: "Start"
         # symbol: "Symbol"
@@ -1602,18 +1606,22 @@ fra:
       items:
         ampere: "Ampère"
         are: "Are"
+        # bar: "Bar"
         candela: "Candela"
         celsius: "Celsius"
         cubic_meter: "Mètre cube"
         day: "Jour"
+        # degree: "Degree"
         dozen: "Douzaine"
         english_horsepower: "Cheval-vapeur anglais"
         farenheit: "Farenheit"
         french_horsepower: "Cheval-vapeur français"
+        # gradian: "Gradian"
         gram: "Gramme"
         gram_per_liter: "Gramme par litre"
         hectare: "Hectare"
         hectoliter: "Hectolitre"
+        # hectopascal: "Hectopascal"
         hour: "Heure"
         hundred: "Centaine"
         joule: "Joule"
@@ -1623,6 +1631,9 @@ fra:
         kilogram_per_liter: "Kilogramme par litre"
         kilogram_per_square_meter: "Kilogramme par mètre carré"
         kilometer: "Kilomètre"
+        # kilometer_per_hour: "Kilometer per hour"
+        # kilometer_per_second: "Kilometer per second"
+        # kilopascal: "Kilopascal"
         kilowatt: "Kilowatt"
         kilowatt_hour: "Kilowatt par heure"
         liter: "Litre"
@@ -1630,6 +1641,7 @@ fra:
         mass_percent: "Pourcentage de masse"
         megawatt: "Mégawatt"
         meter: "Métre"
+        # meter_per_second: "Meter per second"
         microgram: "Microgramme"
         microgram_per_liter: "Microgramme par litre"
         milligram: "Milligramme"
@@ -1640,9 +1652,11 @@ fra:
         minute: "Minute"
         mole: "Mole"
         pair: "Paire"
+        # pascal: "Pascal"
         percent: "Pourcent"
         quintal: "Quintal"
         quintal_per_hectare: "Quintal par hectare"
+        # radian: "Radian"
         second: "Seconde"
         square_meter: "Mètre carré"
         ten: "Dix"
@@ -1689,7 +1703,7 @@ fra:
         bioproduct: "Produit vivant"                       # matter
         black_valley_soil: "Terres noires de vallées"      # land_parcel
         bos: "Bovin"                                       # mammalia
-        brassage_hordeum_hibernum: "Orge d'hiver de brasserie" # hordeum
+        brassage_hordeum_hibernum: "Orge d’hiver de brasserie" # hordeum
         brassica_napus: "Colza"                            # brassicaceae
         brassica_nigra: "Moutarde noire"                   # brassicaceae
         brassica_rapa: "Navet"                             # brassicaceae
@@ -1706,7 +1720,7 @@ fra:
         chardonnay: "Chardonnay"                           # vitis_vinifera
         chemical_fertiliser: "Engrais chimique"            # mineral_matter
         clay_limestone_soil: "Sol argilo-calcaire (Groies)" # land_parcel
-        clay_soil: "Terre d'argile lourde"                 # land_parcel
+        clay_soil: "Terre d’argile lourde"                 # land_parcel
         courtot: "Courtot"                                 # triticum_aestivum
         cultivable_land_parcel: "Parcelle culturale"       # land_parcel_group
         cultivable_zone: "Zone cultivable"                 # zone
@@ -1736,7 +1750,7 @@ fra:
         helianthus: "Tournesol"                            # asteraceae
         herbicide: "Produit herbicide"                     # plant_medicine
         hordeum: "Orge"                                    # poaceae
-        hordeum_hibernum: "Orge d'hiver"                   # hordeum
+        hordeum_hibernum: "Orge d’hiver"                   # hordeum
         hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe" # land_parcel
         immatter: "Immatérialisable"                       # product
         insecta: "Insecte"                                 # animal
@@ -1749,7 +1763,7 @@ fra:
         lepus: "Lagomorphe"                                # mammalia
         levis: "Levis"                                     # triticum_aestivum
         lona: "Lona"                                       # triticum_aestivum
-        low_protein_brassage_hordeum_hibernum: "Orge d'hiver de brasserie (faible teneur en protéïnes)" # hordeum
+        low_protein_brassage_hordeum_hibernum: "Orge d’hiver de brasserie (faible teneur en protéïnes)" # hordeum
         low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)" # hordeum
         malus: "Pommier"                                   # plant
         mammalia: "Mammifère"                              # animal
