--- a/config/locales/jpn/nomenclatures.yml
+++ b/config/locales/jpn/nomenclatures.yml
@@ -885,10 +885,12 @@ jpn:
         # expression: "Expression"
       items:
         # amount_of_substance: "Quantité de matière"
+        # angle: "Angle"
         # concentration: "Concentration"
+        # distance: "Distance"
+        # distance_speed: "Vitesse (distance)"
         # electric_current: "Intensité"
-        # energy: "Energie"
-        # length: "Longueur"
+        # energy: "Énergie"
         # luminous_intensity: "Intensité lumineuse"
         # mass: "Masse"
         # mass_area_density: "Quantité de matière par unité de surface"
@@ -896,6 +898,7 @@ jpn:
         # mass_density: "Quantité de matière par unité de matière"
         # none: "Aucune"
         # power: "Puissance"
+        # pressure: "Pression"
         # specific_volume: "Volume spécifique"
         # surface_area: "Superficie"
         # temperature: "Temperature"
@@ -939,7 +942,7 @@ jpn:
         # incoming_delivery_docket: "Bon de réception"
         # inventory: "Inventaire"
         # journal: "Journal"
-        # manure_management_plan: "Cahier d'épandage"
+        # manure_management_plan: "Cahier d’épandage"
         # outgoing_deliveries_journal: "Journal de livraison"
         # outgoing_delivery_docket: "Bon de livraison"
         # phytosanitary_registry: "Registre phytosanitaire"
@@ -1161,7 +1164,7 @@ jpn:
         # protein_concentration_index: "TP (Taux Protéïque)"
         # protein_matters_concentration: "Teneur en matières protéïques"
         # provisional_grains_yield: "Rendement prévisionnel en grain"
-        # provisional_irrigation_water_input: "Quantité d'eau d'irrigation prévisionnelle"
+        # provisional_irrigation_water_input: "Quantité d’eau d’irrigation prévisionnelle"
         # reproductor: "Reproducteur"
         # sex: "Sexe"
         # shape: "Forme"
@@ -1450,7 +1453,7 @@ jpn:
         # cereals_feed_bag_25: "Aliments céréales en sac de 25 kg"
         # champagne_land_parcel: "Parcelle sur craie Sud Charente et Charente-Martime  (terre de champagne)"
         # chemical_fertiliser_division: "Emplacement de stockage des engrais"
-        # clay_land_parcel: "Parcelle d'argile lourde"
+        # clay_land_parcel: "Parcelle d’argile lourde"
         # clay_limestone_land_parcel: "Parcelle argilo-calcaire (Groies)"
         # complete_herbicide: "Herbicide total"
         # coop:ammonitre_33,5%_vr: "ammonitre COOP 33,5% vrac"
@@ -1512,7 +1515,7 @@ jpn:
         # mineral_cleaner: "Nettoyant chimique"
         # miradoux_hard_wheat_crop: "Culture de blé dur Miradoux"
         # miradoux_hard_wheat_seed_25: "Semence de blé dur Miradoux"
-        # mixed_chemical_fertilizer: "Mélange d'engrais"
+        # mixed_chemical_fertilizer: "Mélange d’engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie / du puit"
@@ -1543,14 +1546,14 @@ jpn:
         # sorghum_crop: "Culture de sorgho"
         # sorghum_seed_25: "Semence de sorgho sac de 25kg"
         # sower: "Semoir"
-        # spelt_seed_25: "Semence d'épeautre sac de 25kg"
+        # spelt_seed_25: "Semence d’épeautre sac de 25kg"
         # spelt_wheat_crop: "Culture d’épeautre"
         # sprayer: "Pulvérisateur"
         # spread_renting: "Location d’épandeur"
         # spreader: "Épandeur à engrais"
         # spreader_trailer: "Épandeur à fumier"
-        # spring_barley_crop: "Culture d'orge de printemps"
-        # spring_barley_seed_25: "Semence d'orge de printemps - sac de 25kg"
+        # spring_barley_crop: "Culture d’orge de printemps"
+        # spring_barley_seed_25: "Semence d’orge de printemps - sac de 25kg"
         # sunflower_crop: "Culture de tournesol"
         # swamp_peaty_land_parcel: "Parcelle de marais tourbeux"
         # tablur_hard_wheat_crop: "Culture de blé dur Tablur"
@@ -1569,8 +1572,8 @@ jpn:
         # wheat_straw: "Paille de blé"
         # wheat_straw_bales: "Bottes de paille de blé"
         # wine: "Vin"
-        # winter_barley_crop: "Culture d'orge d'hiver"
-        # winter_barley_seed_25: "Semence d'orge d'hiver sac de 25kg"
+        # winter_barley_crop: "Culture d’orge d’hiver"
+        # winter_barley_seed_25: "Semence d’orge d’hiver sac de 25kg"
         # zea_herbicide: "Herbicide maïs"
       # name: "Variantes de produits"
     product_natures:
@@ -1632,7 +1635,7 @@ jpn:
         # milk: "Lait"
         # milk_tank: "Tank à lait"
         # mineral_cleaner: "Nettoyant chimique"
-        # mixed_chemical_fertilizer: "Mélange d'engrais"
+        # mixed_chemical_fertilizer: "Mélange d’engrais"
         # molluscicide: "Molluscicide"
         # mower: "Faucheuse"
         # natural_water: "Eau de pluie / du puit"
@@ -1774,7 +1777,7 @@ jpn:
         # bioproduct: "Produit vivant"
         # black_valley_soil: "Terres noires de vallées"
         # bos: "Bovin"
-        # brassage_hordeum_hibernum: "Orge d'hiver de brasserie"
+        # brassage_hordeum_hibernum: "Orge d’hiver de brasserie"
         # brassica_napus: "Colza"
         # brassica_nigra: "Moutarde noire"
         # brassica_rapa: "Navet"
@@ -1791,7 +1794,7 @@ jpn:
         # chardonnay: "Chardonnay"
         # chemical_fertiliser: "Engrais chimique"
         # clay_limestone_soil: "Sol argilo-calcaire (Groies)"
-        # clay_soil: "Terre d'argile lourde"
+        # clay_soil: "Terre d’argile lourde"
         # courtot: "Courtot"
         # cultivable_land_parcel: "Parcelle culturale"
         # cultivable_zone: "Zone cultivable"
@@ -1821,7 +1824,7 @@ jpn:
         # helianthus: "Tournesol"
         # herbicide: "Produit herbicide"
         # hordeum: "Orge"
-        # hordeum_hibernum: "Orge d'hiver"
+        # hordeum_hibernum: "Orge d’hiver"
         # hydromorph_sandy_clay_loam_soil: "Sol sablo-argileux hydromorphe"
         # immatter: "Immatérialisable"
         # insecta: "Insecte"
@@ -1834,7 +1837,7 @@ jpn:
         # lepus: "Lagomorphe"
         # levis: "Levis"
         # lona: "Lona"
-        # low_protein_brassage_hordeum_hibernum: "Orge d'hiver de brasserie (faible teneur en protéïnes)"
+        # low_protein_brassage_hordeum_hibernum: "Orge d’hiver de brasserie (faible teneur en protéïnes)"
         # low_protein_spring_hordeum: "Orge de printemps (faible teneur en protéïnes)"
         # malus: "Pommier"
         # mammalia: "Mammifère"
