--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -478,7 +478,7 @@ jpn:
       # edit: "Modifier un support de production"
       # index: "Supports de production"
       # new: "Nouveau support de production"
-      # show: "Support de production\_: %{id}"
+      # show: "Support de production\_: %{support.name}"
     backend/productions:
       # edit: "Modifier la production\_: %{name}"
       # index: "Productions"
@@ -1630,6 +1630,7 @@ jpn:
       # printable: "Mode «\_Imprimable\_»"
       # resized: "Mode «\_Tout à l’écran\_»"
     # virtual_quantity: "Quantité virtuelle"
+    # wind_speed: "Vitesse du vent"
     # with_assets_depreciations: "Inclure les amortissements des immobilisations"
     # with_prints: "Inclure les impressions (factures, commandes...)"
     x_cashes:
